# eokas-gpu

./: .gitignore  CMakeLists.txt  README.md
src/core/: device.h  header.h  resource.h
src/d3d11/: d3d11-device.cpp  d3d11-device.h  d3d11-header.h  d3d11-resouce.cpp  d3d11-resource.h
src/d3d12/: d3d12-device.cpp  d3d12-device.h  d3d12-header.h
test/: CMakeLists.txt  build-debug.bat  build-debug.sh
test/001-glfw/: header.h  main.cpp
